# gog-conjure

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.gitea/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
assets/: gog-conjure.desktop
scripts/: package-linux.sh
src/: app.rs  config.rs  images.rs  main.rs  theme.rs
src/auth/: login.rs  login_helper.rs  mod.rs
src/disc/: burner.rs  history.rs  install.rs  local_id.rs  macos_drutil.rs  media.rs  mod.rs  models.rs  pack.rs  stage.rs  volid.rs  windows_imapi.rs  xorriso.rs
src/download/: mod.rs  path.rs
src/gog/: mod.rs  models.rs
src/ui/: burn.rs  game_detail.rs  library.rs  mod.rs  plan_modal.rs  queue_panel.rs
